--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,23 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+
+.DS_Store
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
